doc/v2.0/_sources/reference/generated/ak.forms.ByteMaskedForm.rst.txt
ak.forms.ByteMaskedForm
-----------------------

.. py:module: ak.forms.ByteMaskedForm

Defined in `awkward.forms.bytemaskedform <https://github.com/scikit-hep/awkward-1.0/blob/5f5c3f444907b3652ce79f9bf1be15d44cbf1f7d/src/awkward/forms/bytemaskedform.py>`__ on `line 10 <https://github.com/scikit-hep/awkward-1.0/blob/5f5c3f444907b3652ce79f9bf1be15d44cbf1f7d/src/awkward/forms/bytemaskedform.py#L10>`__.

.. py:class:: ak.forms.ByteMaskedForm(self, mask, content, valid_when, *, parameters=None, form_key=None)



.. _ak-forms-bytemaskedform-is_option:

.. py:attribute:: ak.forms.ByteMaskedForm.is_option
    :value: True



.. _ak-forms-bytemaskedform-mask:

.. py:attribute:: ak.forms.ByteMaskedForm.mask



.. _ak-forms-bytemaskedform-content:

.. py:attribute:: ak.forms.ByteMaskedForm.content



.. _ak-forms-bytemaskedform-valid_when:

.. py:attribute:: ak.forms.ByteMaskedForm.valid_when



.. _ak-forms-bytemaskedform-copy:

.. py:method:: ak.forms.ByteMaskedForm.copy(self, mask=unset, content=unset, valid_when=unset, *, parameters=unset, form_key=unset)



.. _ak-forms-bytemaskedform-simplified:

.. py:method:: ak.forms.ByteMaskedForm.simplified(cls, mask, content, valid_when, *, parameters=None, form_key=None)



.. _ak-forms-bytemaskedform-is_identity_like:

.. py:attribute:: ak.forms.ByteMaskedForm.is_identity_like



.. _ak-forms-bytemaskedform-__repr__:

.. py:method:: ak.forms.ByteMaskedForm.__repr__(self)



.. _ak-forms-bytemaskedform-_to_dict_part:

.. py:method:: ak.forms.ByteMaskedForm._to_dict_part(self, verbose, toplevel)



.. _ak-forms-bytemaskedform-_type:

.. py:method:: ak.forms.ByteMaskedForm._type(self, typestrs)



.. _ak-forms-bytemaskedform-__eq__:

.. py:method:: ak.forms.ByteMaskedForm.__eq__(self, other)



.. _ak-forms-bytemaskedform-purelist_parameter:

.. py:method:: ak.forms.ByteMaskedForm.purelist_parameter(self, key)



.. _ak-forms-bytemaskedform-purelist_isregular:

.. py:attribute:: ak.forms.ByteMaskedForm.purelist_isregular



.. _ak-forms-bytemaskedform-purelist_depth:

.. py:attribute:: ak.forms.ByteMaskedForm.purelist_depth



.. _ak-forms-bytemaskedform-minmax_depth:

.. py:attribute:: ak.forms.ByteMaskedForm.minmax_depth



.. _ak-forms-bytemaskedform-branch_depth:

.. py:attribute:: ak.forms.ByteMaskedForm.branch_depth



.. _ak-forms-bytemaskedform-fields:

.. py:attribute:: ak.forms.ByteMaskedForm.fields



.. _ak-forms-bytemaskedform-is_tuple:

.. py:attribute:: ak.forms.ByteMaskedForm.is_tuple



.. _ak-forms-bytemaskedform-dimension_optiontype:

.. py:attribute:: ak.forms.ByteMaskedForm.dimension_optiontype



.. _ak-forms-bytemaskedform-_columns:

.. py:method:: ak.forms.ByteMaskedForm._columns(self, path, output, list_indicator)



.. _ak-forms-bytemaskedform-_select_columns:

.. py:method:: ak.forms.ByteMaskedForm._select_columns(self, index, specifier, matches, output)



.. _ak-forms-bytemaskedform-_column_types:

.. py:method:: ak.forms.ByteMaskedForm._column_types(self)

